[package]
name = "dcs_connector"
version = "0.1.0"
authors = ["Christopher Mühl <christopher@padarom.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "^0.3", features = ["tlhelp32", "handleapi", "memoryapi", "processthreadsapi"] }
